--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 html {
     scroll-behavior: smooth;
 }
+
+#page {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas: "about"
+                         "work"
+                         ""
+    ;
+}
