--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,17 @@ html {
         justify-content: space-between;
     }
 }
+/* <700px layout */
+@media (min-width: 700px) {
+    .wrapper {
+        grid-template-columns: 1fr 4fr 1fr;
+        grid-template-areas: 
+        "header header  header"
+        "nav    content sidebar"
+        "nav    content extra"
+        "footer footer  footer";
+    }
+    nav ul {
+        flex-direction: column;
+    }
+}
