index.html: add links to nav and li's to content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ html {
 .content {
     grid-area: content;
 }
+.portfolio {
+    display: grid;
+    gap: 20px;
+    grid-template-areas: 
+    "item-1 item-1 item-2"
+    "item-1 item-1 item-3"
+    "item-4 item-5 item-6";
+}
 .main-nav {
     grid-area: nav;
 }
