--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    background: var(--sky-blue);
+}
 
 .main-head {
     grid-area: header;
@@ -31,7 +34,18 @@ html {
 }
 .main-nav {
     grid-area: nav;
+    background-color: var(--lake-blue);;
+    overflow: hidden;
 }
+.main-nav>a {
+    /* float: left; */
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
 .side {
     grid-area: sidebar;
 }
