--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,12 @@ body {
 }
 
 .main-head {
-    grid-area: header;
+    grid-area:  header;
     text-align: center;
     background: var(--dingy-black);
     text-align: center;
-    font-size: 35px;
-    color:var(--sky-blue);
+    font-size:  35px;
+    color: var(--sky-blue);
     padding: 60px;
 }
 .content {
@@ -58,7 +58,8 @@ body {
     display: flex;
     flex-direction: row;
     
-    justify-content: space-between;}
+    justify-content: space-between;
+}
 /* Mobile Layout  <500px*/
 .wrapper {
     display: grid;
@@ -76,10 +77,10 @@ body {
     .wrapper {
         grid-template-columns: 1fr 3fr;
         grid-template-areas: 
-            "header  header"
-            "nav     nav"
-            "sidebar content"
-            "extra   footer";
+        "nav     nav"
+        "header  header"
+        "sidebar content"
+        "extra   footer";
     }
     nav ul {
         display: flex;
@@ -91,8 +92,8 @@ body {
     .wrapper {
         grid-template-columns: 1fr 4fr 1fr;
         grid-template-areas: 
+        "nav     nav     nav   "
         "header  header  header"
-        "nav     nav     nav        "
         "sidebar content extra"
         "sidebar content extra"
         "footer footer   footer";
