--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,21 @@ body {
     "item-1 item-1 item-3"
     "item-4 item-5 item-6";
 }
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
 .main-nav {
     grid-area: nav;
     background-color: var(--lake-blue);;
@@ -72,7 +87,7 @@ body {
         "extra"
         "footer";
 }
-/* Mobil >500px */
+/* Mobile atleast 500px*/
 @media (min-width: 500px) {
     .wrapper {
         grid-template-columns: 1fr 3fr;
@@ -87,7 +102,7 @@ body {
         justify-content: space-between;
     }
 }
-/* <700px layout */
+/* Atleast 700px layout */
 @media (min-width: 700px) {
     .wrapper {
         grid-template-columns: 1fr 4fr 1fr;
