--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* @import url(card.css); */
 :root {
     --silver-white: #fafafa;
     --sky-blue: #c7eeff;
@@ -21,32 +22,66 @@ body {
     color: var(--sky-blue);
     padding: 60px;
 }
-.content {
+.main-content {
     grid-area: content;
 }
 .portfolio {
     display: grid;
-    gap: 20px;
-    grid-template-areas: 
+    /* gap: 20px; */
+    max-height: 200px;
+    /* grid-template-columns: ; */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    /* grid-template-rows: 2fr 1fr; */
+    /* grid-template-areas: 
     "item-1 item-1 item-2"
     "item-1 item-1 item-3"
-    "item-4 item-5 item-6";
+    "item-4 item-5 item-6"; */
+}
+.about {
+    grid-area: about;
+    grid-template-rows: 2fr;
+}
+.cards {
+    /* display: grid; */
+    /* grid-template-columns: repeat(auto-fill, minmax(230px 1fr)); */
+    grid-gap: 20px;
+    /* object-fit: none; */
 }
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    display: grid;
+    /* grid-template-rows: max-content 200px 1fr; */
+  }
+  .major-card {
+      grid-column: 1/3;
+      grid-row: 1/3;
+      /* grid-template-columns: 2fr; */
+  }
+  .minor-card {
+      grid-column:1;
+      /* grid-template-columns: 2fr; */
+      /* display: inline; */
   }
   
   /* On mouse-over, add a deeper shadow */
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
+  .card img {
+    object-fit: cover;
+    width: 50%;
+    height: 50%;
+}
   
   /* Add some padding inside the card container */
   .container {
     padding: 2px 16px;
     max-height: 180px;
+    max-width: 180px;
+    font-size: 5;
   }
 .main-nav {
     grid-area: nav;
@@ -70,17 +105,21 @@ body {
 }
 .main-footer {
     background: var(--sky-blue);
+    /* display: grid; */
+    display: flex;
+    margin-right: 50px;
     text-align: center;
     grid-area: footer;
-    display: flex;
     flex-direction: row;
-    
-    justify-content: space-between;
+    justify-content: center;
+}
+.main-nav a {
+    /* padding-right: 250px; */
 }
 .footer-content-right {
     padding-right:40px;
     margin-top:20px;
-    float:right;
+    /* float:right; */
   }
   
   .icon-style {
@@ -93,13 +132,18 @@ body {
     background-color:yellow;
     padding:5px;
   }
+.item-minor {
+    max-height: 50%;
+    max-width: 50%;
+}
 /* Mobile Layout  <500px*/
 .wrapper {
     display: grid;
-    gap: 20px;
+    /* gap: 20px; */
     grid-template-areas: 
         "header"
         "nav"
+        "content"
         "content"
         "sidebar"
         "extra"
@@ -113,6 +157,7 @@ body {
         "nav     nav"
         "header  header"
         "sidebar content"
+        "sidebar content"
         "extra   footer";
     }
     nav ul {
@@ -124,10 +169,10 @@ body {
 @media (min-width: 700px) {
     .wrapper {
         grid-template-columns: 1fr 4fr 1fr;
+        grid-template-rows: 1fr 2fr 9fr 020px;
         grid-template-areas: 
         "nav     nav     nav   "
         "header  header  header"
-        "sidebar content extra"
         "sidebar content extra"
         "footer footer   footer";
     }
